--- a/peerlearningfrontend/public/index.html
+++ b/peerlearningfrontend/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- <meta name="referrer" content="no-referrer-when-downgrade" /> -->
     <meta name="google-signin-client_id" content="762997472592-abdm0ct1g1ufrnupf7f7om2k5qsqc5ku.apps.googleusercontent.com.apps.googleusercontent.com">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
